# Img-VidClassification

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LearnPytorch.ipynb  MNIST_Train.ipynb  Makefile  cmake_install.cmake
.ipynb_checkpoints/: MNIST_Train-checkpoint.ipynb
include/: main.h  permission.h
src/: .main.cpp.swp  main.cpp  permission.cpp
